--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Főoldal</a></li>
-                <li><a href="table.html">Táblázat</a></li>
+                <li><a href="crud.html">Táblázat</a></li>
                 <li><a href="html5.html">HTML5</a></li>
                 <li><a href="chartjs.html">ChartJS</a></li>
                 <li><a href="ajax.html">OOJS</a></li>
