--- a/crud.html
+++ b/crud.html
@@ -69,7 +69,7 @@
             </div>
 
 
-            <div class="movie-table">
+            <div class="data-table">
                 <table>
                     <thead>
                         <tr>
