--- a/crud.html
+++ b/crud.html
@@ -15,7 +15,7 @@
                 <li><a href="crud.html" class="active">Táblázat</a></li>
                 <li><a href="html5.html">HTML5</a></li>
                 <li><a href="chartjs.html">ChartJS</a></li>
-                <li><a href="ajax.html">OOJS</a></li>
+                <li><a href="ajax.html">Ajax</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="buttons">
-                        <input type="reset" value="Mégsem">
+                        <input type="reset" onclick="resetId()" value="Mégsem">
                         <input type="button" value="Mentés" id="save">
                     </div>
                 </form>
@@ -90,8 +90,6 @@
 
     <footer>Buti Attila (W31M7N)</footer>
 
-    <script src="js/helpers.js"></script>
     <script src="js/crud.js"></script>
 </body>
-
 </html>
