--- a/chartjs.html
+++ b/chartjs.html
@@ -15,7 +15,7 @@
                 <li><a href="crud.html">Táblázat</a></li>
                 <li><a href="html5.html">HTML5</a></li>
                 <li><a href="chartjs.html" class="active">ChartJS</a></li>
-                <li><a href="ajax.html">OOJS</a></li>
+                <li><a href="ajax.html">Ajax</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
             </ul>
         </nav>
