--- a/html5.html
+++ b/html5.html
@@ -15,7 +15,7 @@
                 <li><a href="crud.html">Táblázat</a></li>
                 <li><a href="html5.html" class="active">HTML5</a></li>
                 <li><a href="chartjs.html">ChartJS</a></li>
-                <li><a href="ajax.html">OOJS</a></li>
+                <li><a href="ajax.html">Ajax</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
             </ul>
         </nav>
