CRUD-hoz keresés hozzáadva

--- a/crud.html
+++ b/crud.html
@@ -70,6 +70,10 @@
 
 
             <div class="data-table">
+                <div class="search">
+                    <input type="text" placeholder="Keresés..." id="search">
+                </div>
+
                 <table>
                     <thead>
                         <tr>
