--- a/ajax.html
+++ b/ajax.html
@@ -17,6 +17,7 @@
                 <li><a href="chartjs.html">ChartJS</a></li>
                 <li><a href="ajax.html" class="active">Ajax</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
+                <li><a href="/app/">React</a></li>
             </ul>
         </nav>
     </header>
