--- a/chartjs.html
+++ b/chartjs.html
@@ -17,6 +17,7 @@
                 <li><a href="chartjs.html" class="active">ChartJS</a></li>
                 <li><a href="ajax.html">Ajax</a></li>
                 <li><a href="oojs.html">OOJS</a></li>
+                <li><a href="/app/">React</a></li>
             </ul>
         </nav>
     </header>
