--- a/oojs.html
+++ b/oojs.html
@@ -17,6 +17,7 @@
                 <li><a href="chartjs.html">ChartJS</a></li>
                 <li><a href="ajax.html">Ajax</a></li>
                 <li><a href="oojs.html" class="active">OOJS</a></li>
+                <li><a href="/app/">React</a></li>
             </ul>
         </nav>
     </header>
